--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title></title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header><h1>Pokemons</h1></header>
+    <div class="container">
+      <div id="result_area"></div>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
