--- a/index.html
+++ b/index.html
@@ -9,6 +9,245 @@
   </head>
   <body>
     <header><h1>Pokemons</h1></header>
+    <div class="menu">
+      <div class="generations">
+        <h2>Generations</h2>
+        <div class="generations_boxes">
+          <label for="first"
+            >First GEN<input
+              type="radio"
+              id="first"
+              name="pokemon_generations"
+              value="1" /><br
+          /></label>
+          <label for="second"
+            >Second GEN<input
+              type="radio"
+              id="second"
+              name="pokemon_generations"
+              value="2" /><br
+          /></label>
+          <label for="third"
+            >Third GEN<input
+              type="radio"
+              id="third"
+              name="pokemon_generations"
+              value="3" /><br
+          /></label>
+          <label for="fourth"
+            >Fourth GEN<input
+              type="radio"
+              id="fourth"
+              name="pokemon_generations"
+              value="4" /><br
+          /></label>
+          <label for="fifth"
+            >Fifth GEN<input
+              type="radio"
+              id="fifth"
+              name="pokemon_generations"
+              value="5" /><br
+          /></label>
+          <label for="sixth"
+            >Sixth GEN<input
+              type="radio"
+              id="sixth"
+              name="pokemon_generations"
+              value="6" /><br
+          /></label>
+          <label for="seventh"
+            >Seventh GEN<input
+              type="radio"
+              id="seventh"
+              name="pokemon_generations"
+              value="7" /><br
+          /></label>
+          <label for="eighth"
+            >Eighth GEN<input
+              type="radio"
+              id="eighth"
+              name="pokemon_generations"
+              value="8" /><br
+          /></label>
+          <label for="ninth"
+            >Ninth GEN<input
+              type="radio"
+              id="ninth"
+              name="pokemon_generations"
+              value="9" /><br
+          /></label>
+        </div>
+      </div>
+      <div class="types">
+        <h2>Types</h2>
+        <div class="types_boxes">
+          <label for="normal"
+            >normal<input
+              type="checkbox"
+              id="normal"
+              name="pokemon_types"
+              value="normal" /><br
+          /></label>
+
+          <label for="fighting"
+            >fighting<input
+              type="checkbox"
+              id="fighting"
+              name="pokemon_types"
+              value="fighting" /><br
+          /></label>
+
+          <label for="flying"
+            >flying<input
+              type="checkbox"
+              id="flying"
+              name="pokemon_types"
+              value="flying" /><br
+          /></label>
+
+          <label for="poison"
+            >poison<input
+              type="checkbox"
+              id="poison"
+              name="pokemon_types"
+              value="poison" /><br
+          /></label>
+
+          <label for="ground"
+            >ground<input
+              type="checkbox"
+              id="ground"
+              name="pokemon_types"
+              value="ground" /><br
+          /></label>
+
+          <label for="rock"
+            >rock<input
+              type="checkbox"
+              id="rock"
+              name="pokemon_types"
+              value="rock" /><br
+          /></label>
+
+          <label for="bug"
+            >bug<input
+              type="checkbox"
+              id="bug"
+              name="pokemon_types"
+              value="bug" /><br
+          /></label>
+
+          <label for="ghost"
+            >ghost<input
+              type="checkbox"
+              id="ghost"
+              name="pokemon_types"
+              value="ghost" /><br
+          /></label>
+
+          <label for="steel"
+            >steel<input
+              type="checkbox"
+              id="steel"
+              name="pokemon_types"
+              value="steel" /><br
+          /></label>
+
+          <label for="fire"
+            >fire<input
+              type="checkbox"
+              id="fire"
+              name="pokemon_types"
+              value="fire" /><br
+          /></label>
+
+          <label for="water"
+            >water<input
+              type="checkbox"
+              id="water"
+              name="pokemon_types"
+              value="water" /><br
+          /></label>
+
+          <label for="grass"
+            >grass<input
+              type="checkbox"
+              id="grass"
+              name="pokemon_types"
+              value="grass" /><br
+          /></label>
+
+          <label for="electric"
+            >electric<input
+              type="checkbox"
+              id="electric"
+              name="pokemon_types"
+              value="electric" /><br
+          /></label>
+
+          <label for="psychic"
+            >psychic<input
+              type="checkbox"
+              id="psychic"
+              name="pokemon_types"
+              value="psychic" /><br
+          /></label>
+
+          <label for="ice"
+            >ice<input
+              type="checkbox"
+              id="ice"
+              name="pokemon_types"
+              value="ice" /><br
+          /></label>
+
+          <label for="dragon"
+            >dragon<input
+              type="checkbox"
+              id="dragon"
+              name="pokemon_types"
+              value="dragon" /><br
+          /></label>
+
+          <label for="dark"
+            >dark<input
+              type="checkbox"
+              id="dark"
+              name="pokemon_types"
+              value="dark" /><br
+          /></label>
+
+          <label for="fairy"
+            >fairy<input
+              type="checkbox"
+              id="fairy"
+              name="pokemon_types"
+              value="fairy" /><br
+          /></label>
+
+          <label for="unknown"
+            >unknown<input
+              type="checkbox"
+              id="unknown"
+              name="pokemon_types"
+              value="unknown" /><br
+          /></label>
+
+          <label for="shadow"
+            >shadow<input
+              type="checkbox"
+              id="shadow"
+              name="pokemon_types"
+              value="shadow" /><br
+          /></label>
+        </div>
+      </div>
+    </div>
+    <input
+      type="text"
+      id="search_input"
+      placeholder="Search by name or by type"
+    />
     <div class="container">
       <div id="result_area"></div>
     </div>
