--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
     <title>Pokémons</title>
+    <link rel="icon" type="image/x-icon" href="/media/images/favicon.ico">
   </head>
   <body>
     <header>
