Pokémon types have been rearranged.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
     <title>Pokémons</title>
-    <link rel="icon" type="image/x-icon" href="/media/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/media/images/favicon.ico" />
   </head>
   <body>
     <header>
@@ -100,76 +100,21 @@
         <h1>Types</h1>
         <div class="types_boxes">
           <label
-            ><input type="checkbox" name="pokemon_types" value="normal" /><span
-              class="label_normal"
-              >Normal</span
-            ></label
-          >
-          <label
-            ><input
-              type="checkbox"
-              name="pokemon_types"
-              value="fighting"
-            /><span class="label_fighting">Fighting</span></label
-          >
-          <label
-            ><input type="checkbox" name="pokemon_types" value="flying" /><span
-              class="label_flying"
-              >Flying</span
-            ></label
-          >
-          <label
-            ><input type="checkbox" name="pokemon_types" value="poison" /><span
-              class="label_poison"
-              >Poison</span
-            ></label
-          >
-          <label
-            ><input type="checkbox" name="pokemon_types" value="ground" /><span
-              class="label_ground"
-              >Ground</span
-            ></label
-          >
-          <label
-            ><input type="checkbox" name="pokemon_types" value="rock" /><span
-              class="label_rock"
-              >Rock</span
-            ></label
-          >
-          <label
             ><input type="checkbox" name="pokemon_types" value="bug" /><span
               class="label_bug"
               >Bug</span
             ></label
           >
           <label
-            ><input type="checkbox" name="pokemon_types" value="ghost" /><span
-              class="label_ghost"
-              >Ghost</span
+            ><input type="checkbox" name="pokemon_types" value="dark" /><span
+              class="label_dark"
+              >Dark</span
             ></label
           >
           <label
-            ><input type="checkbox" name="pokemon_types" value="steel" /><span
-              class="label_steel"
-              >Steel</span
-            ></label
-          >
-          <label
-            ><input type="checkbox" name="pokemon_types" value="fire" /><span
-              class="label_fire"
-              >Fire</span
-            ></label
-          >
-          <label
-            ><input type="checkbox" name="pokemon_types" value="water" /><span
-              class="label_water"
-              >Water</span
-            ></label
-          >
-          <label
-            ><input type="checkbox" name="pokemon_types" value="grass" /><span
-              class="label_grass"
-              >Grass</span
+            ><input type="checkbox" name="pokemon_types" value="dragon" /><span
+              class="label_dragon"
+              >Dragon</span
             ></label
           >
           <label
@@ -180,9 +125,46 @@
             /><span class="label_electric">Electric</span></label
           >
           <label
-            ><input type="checkbox" name="pokemon_types" value="psychic" /><span
-              class="label_psychic"
-              >Psychic</span
+            ><input type="checkbox" name="pokemon_types" value="fairy" /><span
+              class="label_fairy"
+              >Fairy</span
+            ></label
+          >
+          <label
+            ><input
+              type="checkbox"
+              name="pokemon_types"
+              value="fighting"
+            /><span class="label_fighting">Fighting</span></label
+          >
+          <label
+            ><input type="checkbox" name="pokemon_types" value="fire" /><span
+              class="label_fire"
+              >Fire</span
+            ></label
+          >
+          <label
+            ><input type="checkbox" name="pokemon_types" value="flying" /><span
+              class="label_flying"
+              >Flying</span
+            ></label
+          >
+          <label
+            ><input type="checkbox" name="pokemon_types" value="ghost" /><span
+              class="label_ghost"
+              >Ghost</span
+            ></label
+          >
+          <label
+            ><input type="checkbox" name="pokemon_types" value="grass" /><span
+              class="label_grass"
+              >Grass</span
+            ></label
+          >
+          <label
+            ><input type="checkbox" name="pokemon_types" value="ground" /><span
+              class="label_ground"
+              >Ground</span
             ></label
           >
           <label
@@ -192,21 +174,39 @@
             ></label
           >
           <label
-            ><input type="checkbox" name="pokemon_types" value="dragon" /><span
-              class="label_dragon"
-              >Dragon</span
+            ><input type="checkbox" name="pokemon_types" value="normal" /><span
+              class="label_normal"
+              >Normal</span
             ></label
           >
           <label
-            ><input type="checkbox" name="pokemon_types" value="dark" /><span
-              class="label_dark"
-              >Dark</span
+            ><input type="checkbox" name="pokemon_types" value="poison" /><span
+              class="label_poison"
+              >Poison</span
             ></label
           >
           <label
-            ><input type="checkbox" name="pokemon_types" value="fairy" /><span
-              class="label_fairy"
-              >Fairy</span
+            ><input type="checkbox" name="pokemon_types" value="psychic" /><span
+              class="label_psychic"
+              >Psychic</span
+            ></label
+          >
+          <label
+            ><input type="checkbox" name="pokemon_types" value="rock" /><span
+              class="label_rock"
+              >Rock</span
+            ></label
+          >
+          <label
+            ><input type="checkbox" name="pokemon_types" value="steel" /><span
+              class="label_steel"
+              >Steel</span
+            ></label
+          >
+          <label
+            ><input type="checkbox" name="pokemon_types" value="water" /><span
+              class="label_water"
+              >Water</span
             ></label
           >
         </div>
