--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
-    <title>Pokémons</title>
+    <title>Pokémon</title>
     <link rel="icon" type="image/x-icon" href="/media/images/favicon.ico" />
   </head>
   <body>
